# bible_bot

./: Cargo.toml  README.md  TODO.md
src/: bible_data.rs  config.rs  daily_handler.rs  daily_msg_handler.rs  daily_verse.rs  discord_handler.rs  guildfile.rs  helpers.rs  logging.rs  main.rs  reading_scheudle.rs
src/commands/: chapter.rs  mod.rs  random_verse.rs  reading_calc.rs  register_channel.rs
src/daily_messages/: daily_msg_handler.rs  daily_verse.rs  mod.rs
src/discord_helpers/: mod.rs  multipage_embed.rs
